# anacreon

./: .gitignore  manage.py  pyproject.toml
gluon/: asgi.py  datasource.py  settings.py  urls.py  wsgi.py
gluon/anacreon/: apps.py  base.py  middleware.py  models.py  signals.py
gluon/anacreon/migrations/: 0001_initial.py
gluon/api/: apps.py  helper.py  urls.py  views.py
gluon/api/v1/: fields.py  serializers.py  urls.py  views.py
gluon/utils/dataclasses/: data_classes.py
gluon/utils/mixins/: mixins.py
gluon/utils/views/: mixins.py
ui/: package-lock.json  package.json
ui/.next/: prerender-manifest.json  trace
ui/.next/cache/: .rscinfo
ui/.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
ui/.next/server/app/: page.js  page_client-reference-manifest.js
ui/.next/server/vendor-chunks/: @reduxjs.js  @swc.js  immer.js  react-redux.js  redux-thunk.js  redux.js  reselect.js  use-sync-external-store.js
ui/.next/static/chunks/: app-pages-internals.js  webpack.js
ui/.next/static/chunks/app/: page.js
ui/.next/types/app/: layout.ts  page.ts
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/categories/: page.tsx
ui/app/expenditures/: page.tsx
ui/app/items/: page.tsx
ui/app/orders/: page.tsx
ui/app/settings/: page.tsx
ui/app/stock/: page.tsx
ui/app/subcategories/: page.tsx
ui/app/users/: page.tsx
ui/components/: BarChart.tsx  DataTable.tsx  DonutChart.tsx  Logo.tsx  Modal.tsx  Sidebar.tsx  Sparkline.tsx  ThemeProvider.tsx  ThemeToggle.tsx
ui/components/forms/: Inputs.tsx
ui/config/: sidebar.tsx
ui/data/: settings.ts
ui/lib/: api.ts
ui/store/: index.tsx
(+5 files in other folders)
